Huge changes for homework 8 Changes to be committed: 	modified:   .vscode/settings.json 	modified:   SASS/base/_common.scss 	modified:   SASS/components/_backdrop-modal.scss 	modified:   SASS/components/_modal-form.scss 	new file:   SASS/components/_social-links.scss 	modified:   SASS/layouts/_features-section.scss 	modified:   SASS/layouts/_footer.scss 	modified:   SASS/layouts/_header.scss 	modified:   SASS/layouts/_hero-section.scss 	modified:   SASS/layouts/_our-clients-section.scss 	modified:   SASS/layouts/_our-team-section.scss 	modified:   SASS/layouts/_portfolio-filters.scss 	modified:   SASS/layouts/_portfolio-projects.scss 	modified:   SASS/layouts/_service-section.scss 	modified:   SASS/main.scss 	modified:   SASS/utils/_mixins.scss 	modified:   css/main.css 	modified:   css/main.css.map 	modified:   css/main.min.css 	modified:   css/main.min.css.map 	deleted:    css/portfolio.css.map 	deleted:    css/portfolio.min.css.map 	new file:   css_copy/main.css 	new file:   css_copy/main.css.map 	new file:   css_copy/main.min.css 	new file:   css_copy/main.min.css.map 	renamed:    css/modern-normalize.min.css -> css_copy/modern-normalize.min.css 	renamed:    css/portfolio.css -> css_copy/portfolio.css 	new file:   css_copy/portfolio.css.map 	renamed:    css/portfolio.min.css -> css_copy/portfolio.min.css 	new file:   css_copy/portfolio.min.css.map 	renamed:    css/styles copy.css -> css_copy/styles copy.css 	modified:   img/icomoon.zip 	modified:   img/sprite.svg 	modified:   index.html 	modified:   portfolio.html 	new file:   sass_copy/base/_annimations.scss 	new file:   sass_copy/base/_common.scss 	new file:   sass_copy/base/_reset.scss 	new file:   sass_copy/components/_backdrop-modal.scss 	new file:   sass_copy/components/_btn.scss 	new file:   sass_copy/components/_logo.scss 	new file:   sass_copy/components/_modal-form.scss 	new file:   sass_copy/components/_scroll-to-top.scss 	new file:   sass_copy/layouts/_features-section.scss 	new file:   sass_copy/lay

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <!--================ HEADER ===============-->
     <header class="page-header" id="header">
       <div class="container page-header__container">
+        <!-- prettier-ignore -->
+        <a class="logo link animate__animated animate__bounce" lang="en" href="./index.html"><span class="logo__accent">Web</span>Studio</a>
         <nav class="site-nav">
-          <!-- prettier-ignore -->
-          <a class="logo link animate__animated animate__bounce" lang="en" href="./index.html"><span class="logo__accent">Web</span>Studio</a>
           <ul class="site-nav__list list">
             <li class="site-nav__item">
               <a class="site-nav__link site-nav__link--current link" href="./index.html">Студія</a>
@@ -56,6 +56,11 @@
             </a>
           </li>
         </ul>
+        <button class="menu-btn" type="button">
+          <svg class="menu-btn__icon" width="40" height="40">
+            <use href="./img/sprite.svg#header-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
@@ -113,9 +118,9 @@
         </div>
       </section>
       <!--=========== SERVICE SECTION ===========-->
-      <section class="section section--no-pading">
+      <section class="section service-section">
         <div class="container">
-          <h2 class="section__title">Чим ми займаємося</h2>
+          <h2 class="section__title service__title">Чим ми займаємося</h2>
           <ul class="service list">
             <li class="service__item">
               <div class="img-box">
@@ -144,35 +149,35 @@
           <h2 class="section__title">Наша команда</h2>
           <ul class="team list">
             <li class="team__item">
-              <img src="./img/teammate1.jpg" alt="Фото Игоря Дем'яненка" width="270" />
+              <img src="./img/teammate1.jpg" alt="Фото Игоря Дем'яненка" width="" />
               <div class="team__content">
                 <h3 class="team__name">Игор Дем'яненко</h3>
                 <p class="team__text" lang="en">Product Designer</p>
-                <ul class="team__social-list list">
-                  <li class="team__social-item">
-                    <a class="team__social-link link" href="">
-                      <svg class="team__social-icon" width="20" height="20">
+                <ul class="social-list list">
+                  <li class="social-list__item">
+                    <a class="social-list__link link" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./img/sprite.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team__social-item">
-                    <a class="team__social-link link" href="">
-                      <svg class="team__social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__link link" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./img/sprite.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team__social-item">
-                    <a class="team__social-link link" href="">
-                      <svg class="team__social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__link link" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./img/sprite.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team__social-item">
-                    <a class="team__social-link link" href="">
-                      <svg class="team__social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__link link" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./img/sprite.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -181,35 +186,35 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="./img/teammate2.jpg" alt="Фото Ольги Рєпіної" width="270" />
+              <img src="./img/teammate2.jpg" alt="Фото Ольги Рєпіної" width="" />
               <div class="team__content">
                 <h3 class="team__name">Ольга Рєпіна</h3>
                 <p class="team__text" lang="en">Frontend Developer</p>
-                <ul class="team__social-list list">
-                  <li class="team__social-item">
-                    <a class="team__social-link link" href="">
-                      <svg class="team__social-icon" width="20" height="20">
+                <ul class="social-list list">
+                  <li class="social-list__item">
+                    <a class="social-list__link link" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./img/sprite.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team__social-item">
-                    <a class="team__social-link link" href="">
-                      <svg class="team__social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__link link" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./img/sprite.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team__social-item">
-                    <a class="team__social-link link" href="">
-                      <svg class="team__social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__link link" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./img/sprite.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team__social-item">
-                    <a class="team__social-link link" href="">
-                      <svg class="team__social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__link link" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./img/sprite.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -218,35 +223,35 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="./img/teammate3.jpg" alt="Фото Миколи Тарасова" width="270" />
+              <img src="./img/teammate3.jpg" alt="Фото Миколи Тарасова" width="" />
               <div class="team__content">
                 <h3 class="team__name">Микола Тарасов</h3>
                 <p class="team__text" lang="en">Marketing</p>
-                <ul class="team__social-list list">
-                  <li class="team__social-item">
-                    <a class="team__social-link link" href="">
-                      <svg class="team__social-icon" width="20" height="20">
+                <ul class="social-list list">
+                  <li class="social-list__item">
+                    <a class="social-list__link link" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./img/sprite.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team__social-item">
-                    <a class="team__social-link link" href="">
-                      <svg class="team__social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__link link" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./img/sprite.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team__social-item">
-                    <a class="team__social-link link" href="">
-                      <svg class="team__social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__link link" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./img/sprite.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team__social-item">
-                    <a class="team__social-link link" href="">
-                      <svg class="team__social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__link link" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./img/sprite.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -255,35 +260,35 @@
               </div>
             </li>
             <li class="team__item">
-              <img src="./img/teammate4.jpg" alt="Фото Михайла Єрмакова" width="270" />
+              <img src="./img/teammate4.jpg" alt="Фото Михайла Єрмакова" width="" />
               <div class="team__content">
                 <h3 class="team__name">Михайло Єрмаков</h3>
                 <p class="team__text" lang="en">UI Designer</p>
-                <ul class="team__social-list list">
-                  <li class="team__social-item">
-                    <a class="team__social-link link" href="">
-                      <svg class="team__social-icon" width="20" height="20">
+                <ul class="social-list list">
+                  <li class="social-list__item">
+                    <a class="social-list__link link" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./img/sprite.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team__social-item">
-                    <a class="team__social-link link" href="">
-                      <svg class="team__social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__link link" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./img/sprite.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team__social-item">
-                    <a class="team__social-link link" href="">
-                      <svg class="team__social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__link link" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./img/sprite.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="team__social-item">
-                    <a class="team__social-link link" href="">
-                      <svg class="team__social-icon" width="20" height="20">
+                  <li class="social-list__item">
+                    <a class="social-list__link link" href="">
+                      <svg class="social-list__icon" width="20" height="20">
                         <use href="./img/sprite.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -394,8 +399,10 @@
         <div class="footer-form__wrap">
           <h3 class="footer__heading">Підпишіться на розсилку</h3>
           <form class="footer-form">
-            <input type="email" class="footer-form__input" name="email" id="email" placeholder=" " />
-            <label class="footer-form__label" for="email">E-mail</label>
+            <div class="footer-form__input-container">
+              <input type="email" class="footer-form__input" name="email" id="email" placeholder=" " />
+              <label class="footer-form__label" for="email">E-mail</label>
+            </div>
             <button class="footer-form__btn btn" type="submit">
               Підписатися
               <svg class="footer-form__btn-icon" width="24" height="24">
@@ -449,8 +456,10 @@
                 <use href="./img/sprite.svg#checkbox-checked"></use>
               </svg>
             </span>
-            Погоджуюся з розсилкою та приймаю&nbsp
-            <a href=" ">Умови договору</a>
+            <span>
+              Погоджуюся з розсилкою та приймаю
+              <a href=" ">Умови договору</a>
+            </span>
           </label>
 
           <button class="form__btn btn" type="submit">Відправити</button>
