--- a/portfolio.html
+++ b/portfolio.html
@@ -21,22 +21,22 @@
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-    <link rel="stylesheet" href="./css/portfolio.min.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
 
   <body>
     <!-- ============= HEADER ========== -->
     <header class="page-header" id="header">
       <div class="container page-header__container">
+        <!-- prettier-ignore -->
+        <a class="logo link animate__animated animate__bounce" lang="en" href="./index.html"><span class="logo__accent">Web</span>Studio</a>
         <nav class="site-nav">
-          <!-- prettier-ignore -->
-          <a class="logo link animate__animated animate__bounce" lang="en" href="./index.html"><span class="logo__accent">Web</span>Studio</a>
           <ul class="site-nav__list list">
             <li class="site-nav__item">
               <a class="site-nav__link link" href="./index.html">Студія</a>
             </li>
             <li class="site-nav__item">
-              <a class="site-nav__link link site-nav__link--current" href="./portfolio.html">Портфоліо</a>
+              <a class="site-nav__link site-nav__link--current link link" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="site-nav__item"><a class="site-nav__link link" href="">Контакти</a></li>
           </ul>
@@ -59,6 +59,11 @@
             </a>
           </li>
         </ul>
+        <button class="menu-btn" type="button">
+          <svg class="menu-btn__icon" width="40" height="40">
+            <use href="./img/sprite.svg#header-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <!-- ========== PORTFOLIO SECTION ========== -->
