Fixed mistakes with menu-container. Finaly finished adaptive makeup.
Changes to be committed:
	modified:   SASS/base/_common.scss
	modified:   SASS/layouts/_header.scss
	modified:   css/main.css
	modified:   css/main.css.map
	modified:   css/main.min.css
	modified:   css/main.min.css.map
	modified:   index.html
	modified:   js/mobile-menu.js

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
     <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
   </head>
-  <body>
+  <body data-not-scroll-body>
     <!--================ HEADER ===============-->
     <header class="page-header" id="header">
       <div class="container page-header__container">
